--- a/index.html
+++ b/index.html
@@ -5,5 +5,6 @@
     </head>
     <body>
         <script src="script.js"></script>
+        <script src="index.test.js"></script>
     </body>
 </html>
