--- a/index.html
+++ b/index.html
@@ -1,12 +1,30 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="UTF-8">
-
-    </head>
-    <body>
-        <script src="words.js"></script>
-        <script src="script.js"></script>
-        <script src="index.test.js"></script>
-    </body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
+    <div class="board-module">
+      <div id="board-container">
+        <div id="row-1" class="row" aria-label="row-1">
+          <div id="square-one" class="square"></div>
+          <div class="square"></div>
+          <div class="square"></div>
+          <div class="square"></div>
+          <div class="square"></div>
+        </div>
+        <div id="row-2" class="row"></div>
+        <div id="row-3" class="row"></div>
+        <div id="row-4" class="row"></div>
+        <div id="row-5" class="row"></div>
+        <div id="row-6" class="row"></div>
+      </div>
+    </div>
+    <script src="words.js"></script>
+    <script src="script.js"></script>
+    <script src="index.test.js"></script>
+  </body>
 </html>
